@@ -11569,7 +11569,10 @@ Returns nil if no threads were there to be hidden."
 	      (let ((ol (gnus-make-overlay starteol (point) nil t nil)))
 		(gnus-overlay-put ol 'invisible 'gnus-sum)
 		(gnus-overlay-put ol 'evaporate t)))
-	    (gnus-summary-goto-subject article))
+	    (gnus-summary-goto-subject article)
+            (when (> start (point))
+              (message "Hiding the thread moved us backwards, aborting!")
+              (goto-char (point-max))))
 	(goto-char start)
 	nil))))
 
