@@ -1,3 +1,8 @@
+2011-05-20  Teodor Zlatanov  <tzz@lifelogs.com>
+
+	* gnus-sum.el (gnus-summary-hide-thread): Fix bug where moving to hide
+	the thread moves us backwards and so we loop forever.
+
 2011-05-19  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* mm-bodies.el (mm-decode-content-transfer-encoding): Allow leading
